--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>Doctor uses Library access to add Icons</string>
 	<key>CFBundleDisplayName</key>
 	<string>Orange Doctor Dashboard</string>
 	<key>CFBundleExecutable</key>
