--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   file_picker: ^8.0.6
   http: ^1.2.1
   curl_logger_dio_interceptor: ^1.0.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
