API implementations in add invitation link
1. get brands
2. get specializations
3. get invitation links
4. add invitation links
5. delete invitation links

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   hexcolor:
   dropdown_button2: ^2.3.9
+  get:
+  http:
+  intl:
 
 dev_dependencies:
   flutter_test:
