--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.5.0+1
   image_picker: ^1.1.2
   file_picker: ^8.0.6
+  fluttertoast: ^8.2.6
 
 dev_dependencies:
   flutter_test:
