--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^8.0.6
   fluttertoast: ^8.2.6
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
